services/fertility/k8s/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: fertility
  labels:
    app: fertility
    service: fertility
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: fertility
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fertility
  labels:
    app: fertility
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fertility
  template:
    metadata:
      labels:
        app: fertility
    spec:
      containers:
        - name: fertility
          image: localhost/mapapp/fertility:1.0
          resources:
            limits:
              memory: "300M"
            requests:
              cpu: "100m"
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 8080
