services/fertility/k8s/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fertility-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fertility
spec:
  hosts:
    - "ui.mapapp.local"
  gateways:
    - fertility-gateway
  http:
    - match:
        - uri:
            exact: /api/fertility
      route:
        - destination:
            host: fertility
            port:
              number: 8080
